--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arslan Toolkit - Sim Info Tool</title>
+    <title>Faxal - Sim Info Tool</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -477,7 +477,7 @@
     
     <div class="container">
         <header>
-            <h1>ARSLAN TOOLKIT</h1>
+            <h1>Faxal DB</h1>
             <p class="tagline">SECURE INFORMATION RETRIEVAL SYSTEM</p>
             <button class="theme-toggle" id="themeToggle">
                 <i class="fas fa-moon"></i> DARK MODE
@@ -519,7 +519,7 @@
         </div>
         
         <footer>
-            <p>ARSLAN TOOLKIT &copy; 2023 | ALL RIGHTS RESERVED</p>
+            <p>Fazal-e-Azeem &copy; 2023 | ALL RIGHTS RESERVED</p>
             <p>SECURE INFORMATION RETRIEVAL SYSTEM</p>
         </footer>
     </div>
