--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             </div>
             
             <div class="more-tools">
-                <a href="https://Wa.me/+923257460249" class="more-tools-btn" target="_blank">Contact Fazal-e-Azeem</a>
+                <a href="https://Wa.me/+923257460249" class="more-tools-btn" target="_blank">Contact Faxal</a>
             </div>
             
             <div class="created-by">
