--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                     `;
                 });
                 
-                resultsHTML += `<div class="credit">CREDIT: MR. ARSLAN</div>`;
+                resultsHTML += `<div class="credit">CREDIT: Faxal</div>`;
                 
                 resultContainer.innerHTML = resultsHTML;
             }
