--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     
     <div class="container">
         <header>
-            <h1>Fazal-e-Azeem</h1>
+            <h1>FAXAL</h1>
             <p class="tagline">SECURE INFORMATION RETRIEVAL SYSTEM</p>
             <button class="theme-toggle" id="themeToggle">
                 <i class="fas fa-moon"></i> DARK MODE
