--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <h1>Fazal-e-Azeem</h1>
             <p class="tagline">SECURE INFORMATION RETRIEVAL SYSTEM</p>
             <button class="theme-toggle" id="themeToggle">
-                <i class="fas fa-moon"></i> DARK MODE
+                <i class="fas fa-moon"></i> 
             </button>
         </header>
         
